--- a/main.css
+++ b/main.css
@@ -6,3 +6,37 @@
     padding-right: 20px;
     padding-left: 20px;
 }
+.header-wrapper{
+    display: flex;
+    align-items: center;
+}
+.header-logo{
+    margin-right: 30px;
+}
+.header-form{
+    display: flex;
+    align-items: center;
+}
+.header-input{
+    padding: 10px 10px;
+    background-color: #F9F9F9;
+    border: none;
+}
+.header-input::placeholder{
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: #A8A8A8;
+}
+.header-search{
+    width: 54px;
+    height: 40px;
+    background-repeat: no-repeat;
+    background-color: #82BA01;
+    background-image: url("./images/search-icon.svg");
+    background-size: 30px;
+    background-position: calc(50%);
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border: none;
+}
